[package]
name = "nessus-launcher"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A high-level Rust library for launching Nessus scans with retries, parallelism, and structured logging."
readme = "README.md"
repository = "https://github.com/alexw216/nessus-launcher"
homepage = "https://github.com/alexw216/nessus-launcher"
documentation = "https://docs.rs/nessus-launcher"
keywords = ["nessus", "security", "scanner", "automation", "network"]
categories = ["command-line-utilities", "network-programming", "api-bindings"]
authors = ["Alex Wang <alexw216@gmail.com>"]
include = [
    "src/**/*",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "examples/**/*",
    "tests/**/*",
]


[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-retry = "0.3"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }

